--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/app-check": "^0.8.0",
     "firebase": "^10.5.0",
     "next": "13.5.4",
     "react": "^18",
@@ -17,6 +18,7 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/grecaptcha": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
