--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
-    "react-toastify": "^9.1.3"
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/grecaptcha": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.11",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3",
